--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1337,7 +1337,7 @@ footer{
         align-items: center;
         justify-items: center;
         text-align: center;
-        
+        color: #00000000;
     }
     
     .contato-form{
