--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,9 +18,17 @@ header{
     height: 150px;
     color: black;
     background-color: rgba(255, 255, 255, 0);
-    
 }
 
+html{
+    overflow-x: hidden;
+}
+
+.form-form:focus, input:focus{
+    box-shadow: 0 0 0 0 ;
+    outline: 0;
+    border: 1px solid #1fa1ed77;    
+}
 
 .header{
     max-width: 1140px;
@@ -28,6 +36,9 @@ header{
     margin: auto;
     display: flex;
     align-items: center;
+
+    animation: fadeInDown ;
+    animation-duration: 1.5s;
 }
 
 .logo{
@@ -158,7 +169,22 @@ header{
     margin-bottom: 20px;
     box-shadow: 0px 0px 38px 0px rgb(0 0 0 / 10%);
     border-radius: 10px;
+
+    
 }
+
+.anime{
+    opacity: 0;
+    transition: .3s;
+   
+}
+
+.anime-off{
+     animation: zoomIn;
+    animation-duration: 2s;
+    opacity: 1;
+}
+
 .servico-area1{
     background-color: #ffffff;
     
@@ -204,6 +230,9 @@ header{
     padding-bottom: 26px;
     color: #ffff;
    padding-bottom: 40px;
+
+   animation: fadeInLeft ;
+   animation-duration: 1.5s;
 }
 
 
@@ -225,6 +254,9 @@ header{
     text-align: left;
     color: aliceblue;
     line-height: 28px;
+
+    animation: fadeInLeft ;
+    animation-duration: 1.5s;
 }
 
 .button-are-um{
@@ -232,10 +264,14 @@ header{
     background-color: #ff1245;
     width: 160px;
     height: 45px;
-    
+    cursor: pointer;
     border-radius: 10px 0px 10px 0px ;
     border: 1px solid rgba(0, 0, 0, 0.113);
+
+    animation: fadeInLeft ;
+    animation-duration: 1.5s;
 }
+
 
 .button-are-um:hover{
     background-color: #8f1a33c8;
@@ -244,6 +280,8 @@ header{
 .area-conteudo-dois{
  padding-left: 100px;   
  
+ animation: fadeInRight;
+ animation-duration: 1.5s;
 }
 
 
@@ -307,7 +345,7 @@ header{
 
 .color{
     position: absolute;
-    background-color: #F3F7FD;
+    background-color: #ffffff;
     left: 0;
     margin-top: -300px;
     width: 100%;
@@ -387,6 +425,8 @@ header{
     box-shadow: 0px 0px 38px 0px rgb(0 0 0 / 8%);
     z-index: 1;
     overflow: hidden; 
+    height: 120px;
+    
 }
 .caixa2-a::after{
     position: absolute;
@@ -400,17 +440,18 @@ header{
     z-index: 1;
 }
 
-.caixa2-a-text{
-    position: absolute;
-    z-index: 2;
-    padding-left: 40px;
-    top: 26px;
+.caixa2-a-text{   
+    position: relative;
+    z-index: 99;
+    top: 0px;
     text-align: center;
     line-height: 30px;
     color: #1f1f1f;
+    margin-top: -16px;
 }
 .caixa2-a-text p{
    font-size: 15px;
+   color: #1f1f1f;
 }
 .caixa2-a-text h1{
     font-size: 20px;
@@ -520,8 +561,6 @@ header{
      height: 60%;
      display: flex;
      transition: all ease 0.3s;
-     background-color: rgb(137, 43, 226);
-
 }
 
 .carousel-img{
@@ -624,6 +663,11 @@ header{
     font-size: 15px;
     padding-left: 24px;
     padding-bottom: 30px;
+    line-height: 2px;
+}
+.contato-text-area1 p a{
+    text-decoration: none;
+    color: #1FA3ED;
 }
 .contato-text-area2{
     line-height: 1px;
@@ -689,6 +733,7 @@ hr{
     font-size: 15px;
     line-height: 20px;
     color: #373737;
+    text-decoration: none;
 }
 
 .place-buttom{
@@ -725,16 +770,68 @@ hr{
     font-size: 15PX;
     border-radius: 10px 0px 10px 0px ;
     border: 1px solid rgba(0, 0, 0, 0.113);
-    
-    
+    cursor: pointer;
 }
 
 #buttom:hover{
     background-color: #8d112ce8;
 }
 
+/*Sobre*/
+.sobre{
+    height: 800px;
+    background-color: #ffffff;
+    display: grid;
+    justify-items: center;
+}
 
+.sobre-h1{
+    font-size: 36px;
+    margin-top: 60px;
+    color: #1f1f1f;
+}
 
+.sobre-sobre{
+    display:  grid;
+    grid-template-columns: 350px 500px;
+    align-items: center;
+
+}
+
+.sobre-area1 {
+    margin-top: 20px;
+    margin-right: 40px;
+    
+}
+.sobre-area1 h3{
+    font-size: 20px;
+    line-height: 35px;
+    text-align: justify;
+    color: #373737;
+    padding-bottom: 30px;
+    padding-top: 265px;
+}
+.sobre-area2 h1{
+    font-size: 40px;
+    color: #1f1f1f;
+    padding-bottom: 30px;
+}
+.sobre-area2 {
+   margin-left: 20px;
+}
+.sobre-area2 h3{
+    font-size: 20px;
+    line-height: 35px;
+    color: #373737;
+    text-align: justify;
+}
+
+.sobre-img{
+    position: absolute;
+    width: 320px;
+    height: 270px;
+    
+}
 
 footer{
     background-color: #000000;
@@ -771,6 +868,7 @@ footer{
 }
 
 .footer-social-img a{
+    text-decoration: none;
     padding-left: 20px;
 }
 
@@ -809,7 +907,11 @@ footer{
      color: #5c5c5c; 
 }
 
-
+   
+.color-img {
+    margin-top: -60;
+   height: -70px;
+}
 
 /* media queries*/
 
@@ -818,9 +920,24 @@ footer{
         width: 300px;
         height: 300px;
     }
+
 }
 
 @media (max-width: 1350px ) and (min-width: 801px) {
+
+    /*Sobre*/
+    .sobre{
+        height: 1500px;
+    }
+
+    .sobre-sobre{
+         display: block;
+         max-width: 400px;
+         margin-top: 0px;
+    }
+
+    /*servico*/
+
     .servicos{
         height: 1600px;
     }
@@ -927,6 +1044,11 @@ footer{
      margin-top: -60px;
     }
 
+    .color-fundo{
+        margin-top: 0px;
+        height: 500px;
+    }
+
     /*slaid*/
 
     .titulo-slaid h1{
@@ -980,6 +1102,7 @@ footer{
 }
 
 @media (max-width:800px) {
+   
     nav{
         display: none;
     }
@@ -1008,7 +1131,7 @@ footer{
         width: 100vw;
         height: 100vh;
 
-        background-color: #1FA3ED;
+        background-color: #1fa1edf8;
         z-index: 10;
         display: flex;
         justify-content: center;
@@ -1044,6 +1167,53 @@ footer{
         font-size: 2rem;
         line-height: 4rem;
         display: block;
+    }
+
+    /*Sobre*/
+    .sobre{
+        height: 1400px;
+        display: grid;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .sobre-sobre{
+         display: block;
+         max-width: 300px;
+         margin-top: 0px;
+    }
+
+    .sobre-img{
+        width: 200px;
+        height: 200px;
+    }
+    
+    .sobre-h1{
+        text-align: center;
+        margin-top: 0px;
+        font-size: 25px;
+    }
+
+    .sobre-area1 {
+        margin-top: 0px;
+        margin-right: 0px;
+     }
+
+     .sobre-h1{
+        margin-top: 0px;
+    }
+
+    .sobre-area1 h3{
+        font-size: 16px; 
+    }
+    .sobre-area2 {
+        margin-left: 0px;
+     }
+    .sobre-area2 h1{
+        font-size: 40px;
+    }
+    .sobre-area2 h3{
+        font-size: 16px;
     }
 
     /*Flexibilidade*/
@@ -1247,10 +1417,26 @@ footer{
         margin-right: 0px;
     }
 
+    .caixa2-a{
+        height: 60px;
+    }
     
     .caixa2-a-text {
-        padding-left: 20px;
-        padding-right: 40px;
+        padding-left: 0px;
+        padding-right: 0px;
+        
+    }
+    .caixa2-a-text h1{
+       font-size: 15px;
+       line-height: 20px;
+    }
+    .caixa2-a-text p{
+       font-size: 10px;
+    }
+
+    .color-fundo{
+        margin-top: 0px;
+        height: 200px;
     }
     
     /*SLAID*/
